--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   </style>
 </head>
 <body>
-<div><img class="run" src="/images/image-qr-code.png" alt=""><h1>Improve your front-end skills by building projects
+<div><img class="run" src="/image-qr-code.png" alt=""><h1>Improve your front-end skills by building projects
 </h1><p class="Mentor">Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p></div>
 
 </body>
